--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,15 @@
     android:padding="20dp"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20sp"
+        android:text="@string/mad_libs"
+        style="@style/Title" />
     <LinearLayout
+        android:id="@+id/input_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -28,9 +36,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/noun"/>
+                android:hint="@string/noun"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_1"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -39,9 +49,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,9 +73,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/noun"/>
+                android:hint="@string/noun"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_2"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -72,9 +86,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -94,9 +110,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/verb"/>
+                android:hint="@string/verb"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_3"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -105,9 +123,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -127,9 +147,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/verb"/>
+                android:hint="@string/verb"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_4"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -138,9 +160,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -160,9 +184,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/body_part"/>
+                android:hint="@string/body_part"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_5"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -171,9 +197,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -193,9 +221,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/adjective"/>
+                android:hint="@string/adjective"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_6"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -204,9 +234,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -226,9 +258,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/noun"/>
+                android:hint="@string/noun"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_7"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
@@ -237,9 +271,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/input_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -259,9 +295,11 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
-                android:hint="@string/adjective"/>
+                android:hint="@string/adjective"
+                android:autofillHints="no" />
         </LinearLayout>
         <Button
+            android:id="@+id/btn_8"
             android:layout_width="60dp"
             android:layout_height="45dp"
             android:text="@string/go"
