--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,13 @@
         android:layout_marginBottom="20sp"
         android:text="@string/mad_libs"
         style="@style/Title" />
+    <ImageView
+        android:id="@+id/computer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:src="@drawable/computer"/>
     <LinearLayout
         android:id="@+id/input_1"
         android:layout_width="wrap_content"
@@ -308,12 +315,16 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scroll"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/txtContent"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:textSize="25sp"
             android:text="" />
     </ScrollView>
 </LinearLayout>
